@@ -1,5 +1,6 @@
 == Version 1.0.6 (in SVN)
 
+* Fixed [#11508] Exceptions are not raised for Controller Specs
 * Applied [#11615] Partial mock methods give ambiguous failures when given a method name as a String (Patch from Jay Phillips)
 * Fixed [#11545] Rspec doesn't handle should_receive on ActiveRecord associations (Patch from Ian White)
 * Fixed [#11514] configuration.use_transactional_fixtures is ALWAYS true, regardless of assignment
